--- a/src/main/resources/org/apache/jetspeed/portlets/security/resources/LoginResources_zh.properties
+++ b/src/main/resources/org/apache/jetspeed/portlets/security/resources/LoginResources_zh.properties
@@ -43,3 +43,5 @@ login.label.ErrorCode.4=\u65e0\u6548\u5bc6\u7801.<br/>Warning: \u8be5\u5e10\u53f
 login.label.ErrorCode.5=\u8be5\u7528\u6237\u5e10\u53f7\u7684\u5bc6\u7801\u5df2\u7ecf\u88ab\u7981\u7528.<br/>\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458.
 # LoginConstants.ERROR_CREDENTIAL_EXPIRED
 login.label.ErrorCode.6=\u8be5\u5e10\u53f7\u7684\u5bc6\u7801\u5df2\u8fc7\u671f.<br/>\u8bf7\u8054\u7cfb\u7ba1\u7406\u5458.
+
+login.label.KeepMeSignedIn=\u4fdd\u6301\u767b\u9646
